--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <div class="user">
        <img src="photo.jpg">
-       <h5 class="nm">Blessian D Jutike</h5>
+       <h5 class="nm">Manish Manghnani</h5>
        <p class="jb">Student</p>
        </div>
        <nav class="nv">
@@ -20,6 +20,7 @@
              <li><a href="#Education">Education</a></li>
              <li><a href="#Technical Skills">Technical Skills</a></li>
              <li><a href="#Project">Project</a></li>
+              <li><a href="#Honors and Awards">Honors and Awards</a></li>
           </ul>
        </nav>
     </header>
@@ -27,11 +28,11 @@
         <h1 class="heading"><span>Details about me</span></h1>
         <div class="Row">
         <div class="det">
-             <h3><span>Name: </span>Blessian D Jutike</h3>
-             <h3><span>Age: </span>30</h3>
-             <h3><span>Gender: </span>Female</h3>
-             <h3><span>Email: </span>blessi000@hmail.com</h3>
-             <h3><span>Phone_no: </span>9875555555</h3>    
+             <h3><span>Name: </span>Manish Manghnani</h3>
+             <h3><span>Age: </span>21</h3>
+             <h3><span>Gender: </span>Male</h3>
+             <h3><span>Email: </span>manishmanghnani2653@gmail.com</h3>
+             <h3><span>Phone_no: </span>9636390275</h3>    
         </div>
     </div>
     </section>
@@ -45,22 +46,22 @@
             <th>Percentage</th>
         </tr>
         <tr>
-            <td>SSCL</td>
-            <td>William Richards High School</td>
-            <td>KSEEB</td>
-            <td>70</td>
+            <td>BCA</td>
+            <td>Apex Institute of Managment and Science</td>
+            <td>RU</td>
+            <td>65</td>
         </tr>
         <tr>
-            <td>Diploma</td>
-            <td>Govt Polyechnic Immadihalli</td>
-            <td>DTE</td>
-            <td>68</td>
+            <td>12th</td>
+            <td>Tagore Vidhya Bhawan</td>
+            <td>RBSE</td>
+            <td>58</td>
         </tr>
         <tr>
-            <td>BE</td>
-            <td>New Horizon College</td>
-            <td>VTU</td>
-            <td>60</td>
+            <td>10th</td>
+            <td>Adarsh Vidhya Mandir</td>
+            <td>RBSE</td>
+            <td>63</td>
         </tr>
     </table>
 </section>
@@ -73,14 +74,9 @@
         <li>C++</li>
         <li>HTML</li>
         <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Angular</li>
-        <li>Oracle</li>
         <li>MySQL</li>
         <li>Python</li>
         <li>Manual Testing</li>
-        <li>Automation Testing</li>
-        <li>Data Structures</li>
     </ul>
 </div>
 </section>
@@ -89,18 +85,22 @@
     <div class="Row">
         <div class="det">
     <h3><span>Role: </span>Team member</h3>
-    <h3><span>Title: </span>Eye state detection of driver</h3>
-    <h3><span>Description: </span>Developing intelligent systems to prevent accidents
-                can be bery effective in minimizingaccident death toll. 
-                Drivers fatigue is one of the major causes of traffic 
-                accidents,particularly for drivers of large vehicles
-                (such as buses and heavy trucks)due to prolonged driving
-                in working conditions. This project detects the signs of 
-                fatigue and sleepiness in the face of the person at the 
-                time of driving in this model, the person's face is filmed 
-                by a camera in the first step by receiving video sequence, 
-                the level of drowsiness is detected.</h3>
+    <h3><span>Title: </span>UNIVERSITY MANAGEMENT SYSTEM (UMS)</h3>
+    <h3><span>Description: </span>UMS is a flagship product of Easy Solution which covers all aspects of Universities, 
+        Colleges or Schools. UMS covers every minute aspects of a universities work flow and integrates all processes 
+        with user friendly interface</h3>
             </div>
+        <section class="Honors and Awards" id="Honors and Awards">
+    <h1 class="head"><span>Honors and Awards</span></h1>
+    <div>
+    <ul id="lis">
+        <li>Winner in State Level Kabaddi Competition</li>
+        <li>Runner-up in 'Badminton ' in Annual Social Gathering ‘Techno Agas’</li>
+        <li>Complete Course 'RS-CIT' in 2017 with 65%</li>
+        <li>Complete Cyber Securitty Internship with Gurugram Police in 2021</li>
+        <li>Complete Basic Course of Share Market in 2021</li>
+    </ul>
+</div>
 </div>
 </section>
 </body>
