--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         Colleges or Schools. UMS covers every minute aspects of a universities work flow and integrates all processes 
         with user friendly interface</h3>
             </div>
+        </section>
         <section class="Honors and Awards" id="Honors and Awards">
     <h1 class="head"><span>Honors and Awards</span></h1>
     <div>
