--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <h1 class="title"><span>Education</span></h1><br><br><br>
     <table>
         <tr>
-            <th>Cource</th>
-            <th>Name of the institude</th>
+            <th>Course</th>
+            <th>Name of the institute</th>
             <th>University</th>
             <th>Percentage</th>
         </tr>
